@@ -30,6 +30,21 @@ java -jar mesh-demo-X.X.X.jar
 Gentics Mesh comes with OrientDB, an embedded graph database, and Elasticsearch. There are no external dependencies besides Oracle Java Runtime 1.8.0_40 or newer.
 On first startup, Gentics Mesh will create the data folder and subfolders, set a password for the keystore file and provide the configuration files mesh.yml and mesh-ui-config.js. See <<Installation Directory>> for a detailed discussion on Gentics Mesh files & folders.
 
+[[cli]]
+=== Command Line Arguments
+
+Various command line arguments can be used to override or supplement previously configured settings.
+
+[options="header"]
+|======
+| Flag                   | Type    | Description
+| `-resetAdminPassword`  | String  | Set the admin password which will be used to override the existing admin user password. It is advised to change the password once again after the reset has been performed.
+| `-httpPort`            | Number  | Override the used http port from the `mesh.yml` file.
+| `-clusterName`         | String  | Override the configured cluster name from the `mesh.yml` file.
+| `-nodeName`            | String  | Override the configured node name from the `mesh.yml` file.
+| `-initCluster`         | -       | Argument that can be used to configure Gentics Mesh in a way so that the Datebases are directly ready to be used in a clustering environment. This is usually only used for testing or setup of fresh cluster instances.
+|======
+
 
 == Run with Docker
 
